tests/codegen/fail/object/derive_fields_duplicate.rs
use juniper::GraphQLObject;

#[derive(GraphQLObject)]
struct ObjA {
    id: String,
    #[graphql(name = "id")]
    id2: String,
}

fn main() {}
