tests/codegen/fail/object/derive_fields_duplicate.stderr
error: GraphQL object must have a different name for each field
       · note: https://spec.graphql.org/October2021#sec-Objects
 --> fail/object/derive_fields_duplicate.rs:4:1
  |
4 | / struct ObjA {
5 | |     id: String,
6 | |     #[graphql(name = "id")]
7 | |     id2: String,
8 | | }
  | |_^
